[workspace]
members = [
    "scepter-server",
    "scepter-agent",
    "scepter-common",
    "xtask",
]
resolver = "3"

[profile.release]
debug = false
strip = "symbols"
opt-level = "z"
panic = "abort"
incremental = false
codegen-units = 1
overflow-checks = false
debug-assertions = false
rpath = false

# Additional size reduction for all dependencies
[profile.release.package."*"]
opt-level = "z"
strip = "symbols"
codegen-units = 1
