[package]
name = "scepter-agent"
version = "0.1.0"
edition = "2024"

[lib]
name = "scepter_agent"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "scepter-agent"
path = "src/main.rs"

[profile.release]
strip = "symbols"
panic = "abort"
opt-level = "z"
codegen-units = 1
lto = true

[dependencies]
scepter-common = { path = "../scepter-common" }
russh = "0.52.1"
tokio = "1.45.0"
windows-sys = { version = "0.59.0", features = ["Win32_System_Threading"]}
debug_print = "1.0.0"
