[package]
name = "scepter-server"
version = "0.1.0"
edition = "2024"

[lib]
name = "dll_rs"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "scepter-server"
path = "src/main.rs"

[dependencies]
windows-sys = {version = "0.52.0", features = ["default"]}
russh = "0.52.1"
rand_core = "0.6.4"
tokio = "1.45.0"
env_logger = "0.11.8"
log = "0.4.27"
